Redo gitignore to cover as much of the tree as possible.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 OLDpy
+Q0
 Q0b
 Q1
 Q2
 Q3
-Q3/log*
-Q3/cmd
-Q3/act
-Q3/ext
-Q3/dat
 Q4
-Q4/log*
-Q4/cmd
-Q4/act
-Q4/ext
-Q4/dat
 logs
-shelf/CallTree-00.txt
+*.zip
+*.tmp
+*.pyc
+*.bak
+*.wbk
+articles
+test
+tmp
+results
+
