--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ searchspacedb
 *.RData
 *.Rhistory
 
+baseline/.DS_Store
+baseline/.DS_Store
+PaperDraft/.DS_Store
+scaling/docsize/.Rapp.history
+scaling/.DS_Store
+baseline/.DS_Store
+baseline/.DS_Store
+baseline/.DS_Store
+baseline/.DS_Store
